--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <h1>I love Someone</h1>
     <div>
-        <h3>For every other time</h3>
-        <p>git add .</p>
-        <p>git commit -m "Specific Details"</p>
+        <p>For Every other time</p>
+        <p>Git add .</p>
+        <p>git commit -m "Valuable text"</p>
         <p>git push</p>
     </div>
 
